--- a/Datareduction_obs1.ipynb
+++ b/Datareduction_obs1.ipynb
@@ -11,9 +11,10 @@
    "source": [
     "<center><h1>Observational Astrophysics I</h1><br><br>Laboratory exercise - HR diagram of a cluster<br>\n",
     "\n",
-    "<br><br>By A.G.M. Pietrow<br><br>based on the Stockholm University IRAF lab by Magnus Gålfalk & Andreas Sandberg <br>and the Leiden University lab by Olivier Burggraaff, A.G.M. Pietrow and Sascha Zeegers<br><br>Stockholm Observatory 2020</center>\n",
+    "<br><br>By A.G.M. Pietrow<br><br>based on the Stockholm University IRAF lab by Magnus Gålfalk & Andreas Sandberg <br>and the Leiden University lab by Olivier Burggraaff, A.G.M. Pietrow and Sascha Zeegers<br><br>Stockholm Observatory 2021</center>\n",
     "\n",
-    "![image0.png](attachment:image0.png)"
+    "![image0.png](attachment:image0.png)\n",
+    "<center>M35 - Image credit: N.A.Sharp/NOAO/AURA/NSF</center>"
    ]
   },
   {
@@ -35,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -85,7 +88,7 @@
    "outputs": [],
    "source": [
     "from astropy.io import fits as f\n",
-    "path = \"data/T11/M35/\"\n",
+    "path = \"data/T11/M35/\" #Change this if your data is elsewhere!\n",
     "\n",
     "flat = f.open(path+\"raw-T11-m35-20200219-000148-B-BIN1-W-060-001.fit\")[0] #note the 0!\n",
     "\n",
@@ -103,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "flat.header"
@@ -119,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('The filter of the image is: ', flat.header[\"FILTER\"])"
@@ -135,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.imshow(flat.data,cmap='gray',origin='lower',vmax=3000)\n",
@@ -161,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Your code here! ##\n"
@@ -185,7 +196,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import astropy.io.fits as f\n",
@@ -220,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##\n",
@@ -243,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path = 'darks/T11/'\n",
@@ -277,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## ------------------------------------------------------------------- ##\n",
@@ -331,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Your code here!\n",
@@ -391,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%run pos\n",
@@ -419,7 +442,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xe = 132\n",
@@ -450,7 +475,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n = 3 #the amount of regions\n",
@@ -482,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here!\n"
